se ajusta carro

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             });
 
             var symbol = new PictureMarkerSymbol({
-                url: "https://github.com/picoyplacavillavicencio/picoyplaca/blob/0483929a349dd01b1f243f030a97ad1cad8ffe61/docs/car.png",
+                url: "https://raw.githubusercontent.com/picoyplacavillavicencio/picoyplacavillavicencio.github.io/e11c64a214d977a03a9b8a997b43d8bc9cbd098a/car.png",
                 width: "64px",
                 height: "64px"
             });
