Se separa el código
se crean archivos independientes js con la logica y css para los estilos

--- a/index.html
+++ b/index.html
@@ -3,166 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Aplicación pico y placa Villavicencio</title>
-    <style>
-        html, body, #viewDiv {
-            padding: 0;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-        }
-        /* Estilos para pantallas de tamaño pequeño (menos de 600px) */
-        @media only screen and (max-width: 600px) {
-            body {
-                background-color: lightblue;
-            }
-        }
-
-        /* Estilos para pantallas de tamaño mediano (601px a 992px) */
-        @media only screen and (min-width: 601px) and (max-width: 992px) {
-            body {
-                background-color: lightgreen;
-            }
-        }
-
-        /* Estilos para pantallas de tamaño grande (993px en adelante) */
-        @media only screen and (min-width: 993px) {
-            body {
-                background-color: lightyellow;
-            }
-            
-        }
-
-        @media only screen and (max-width: 600px) {
-            .esri-legend__layer {
-                flex-direction: column;
-            }
-
-            .esri-legend__layer-label {
-                order: 2;
-            }
-
-            .esri-legend__layer-table {
-                order: 1;
-            }
-        }
-    </style>
-
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://js.arcgis.com/4.15/esri/themes/light/main.css">
     <script src="https://js.arcgis.com/4.15/"></script>
-
-    <script>
-        require([
-            "esri/Map",
-            "esri/views/MapView",
-            "esri/WebMap",
-            "esri/geometry/Point",
-            "esri/tasks/QueryTask",
-            "esri/tasks/support/Query",
-            "esri/widgets/Home",
-            //"esri/widgets/Zoom",
-            "esri/widgets/Locate",
-            "esri/Graphic",
-            "esri/layers/GraphicsLayer",
-            "esri/symbols/PictureMarkerSymbol",
-            "esri/widgets/Legend",
-            "esri/renderers/SimpleRenderer"
-        ], function(Map, MapView, WebMap, Point, QueryTask, Query, Home, Locate, Graphic, GraphicsLayer, PictureMarkerSymbol, Legend, SimpleRenderer) {
-            var webmap = new WebMap({
-                portalItem: {
-                    id: "dbce66d3fd6c41bd85394c9113c52a45"
-                }
-            });
-
-            var view = new MapView({
-                container: "viewDiv",
-                map: webmap
-            });
-
-            var symbol = new PictureMarkerSymbol({
-                url: "https://raw.githubusercontent.com/picoyplacavillavicencio/picoyplacavillavicencio.github.io/e11c64a214d977a03a9b8a997b43d8bc9cbd098a/car.png",
-                width: "64px",
-                height: "64px"
-            });
-
-            var renderer = new SimpleRenderer({
-                symbol: symbol,
-                label: "Car",
-                description: "This is a car"
-            });
-            
-            var graphicsLayer = new GraphicsLayer({
-                renderer: renderer
-            });
-
-            webmap.add(graphicsLayer);
-
-            view.when(function() {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var point = new Point({
-                        longitude: position.coords.longitude,
-                        latitude: position.coords.latitude
-                    });
-                    /*var pointGraphic = new Graphic({
-                        geometry: point,
-                        symbol: {
-                            type: "simple-marker",
-                            color: [226, 119, 40],
-                            outline: {
-                                color: [255, 255, 255],
-                                width: 2
-                            }
-                        }
-                    });*/
-
-                    var pointGraphic = new Graphic({
-                        geometry: point,
-                        symbol: symbol
-                    });
-
-                    //view.graphics.add(pointGraphic);
-                    graphicsLayer.add(pointGraphic);
-
-                    var queryTask = new QueryTask({
-                        url: "https://services1.arcgis.com/7S16A7PAFcmSmqJA/arcgis/rest/services/Zona_pyp/FeatureServer/0"
-                    });
-
-                    var query = new Query();
-                    query.geometry = point;
-                    query.spatialRelationship = "intersects";
-
-                    queryTask.execute(query).then(function(result) {
-                        if (result.features.length > 0) {
-                            alert("Ud está en zona de pico y placa");
-                        } else {
-                            alert("Ud no está en zona de pico y placa");
-                        }
-                    });
-                });
-            });
-
-            var legend = new Legend({
-                view: view
-            });
-
-            var homeWidget = new Home({
-                view: view
-            });
-
-            var locateWidget = new Locate({
-                view: view,
-                useHeadingEnabled: false,
-                goToOverride: function(view, options) {
-                    options.target.scale = 1500;
-                    return view.goTo(options.target);
-                }
-            });
-            view.ui.add(legend, "bottom-right");
-            view.ui.add(homeWidget, "top-left");
-            view.ui.add(locateWidget, "top-left");
-            locateWidget.locate();
-
-        });
-    </script>
+    <script src="main.js"></script>
 </head>
 <body>
     <div id="viewDiv"></div>
