separacion por capas de codigo

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Aplicación pico y placa Villavicencio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Verificación de Pico y Placa en Villavicencio</title>
+    <meta name="description" content="Aplicación para verificar la zona de pico y placa en Villavicencio.">
+    <meta name="keywords" content="pico y placa, Villavicencio, aplicación, verificación, geolocalización, polígono">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://js.arcgis.com/4.15/esri/themes/light/main.css">
-    <script src="https://js.arcgis.com/4.15/"></script>
-    <script src="main.js"></script>
 </head>
 <body>
+    <h1>Aplicación pico y placa Villavicencio</h1>
+    <h2>Verifica la zona de pico y placa en Villavicencio</h2>
     <div id="viewDiv"></div>
+    <script src="https://js.arcgis.com/4.15/"></script>
+    <script src="main.js"></script>    
 </body>
 </html>
