--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Aplicación pico y placa Villavicencio</h1>
-    <h2>Verifica la zona de pico y placa en Villavicencio</h2>
+    <h2>Verifica si usted tiene pico y placa y si se encuentra dentro de la zona de pico y placa en Villavicencio</h2>
     <div id="viewDiv"></div>
     <script src="https://js.arcgis.com/4.15/"></script>
     <script src="main.js"></script>    
